// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when all data is available updates each platforms task notes 1`] = `
[
  [
    "android-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/android/pr/1">Android PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "bsk-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/BrowserServicesKit/pr/1">BrowserServicesKit PR</a></li>
    <li><a href="https://github.com/duckduckgo/ios/pr/1">iOS PR</a></li><li><a href="https://github.com/duckduckgo/macos-browser/pr/1">macOS PR</a></li>
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "ios-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/ios/pr/1">iOS PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "macos-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/macos-browser/pr/1">macOS PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "windows-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/windows-browser/pr/1">Windows PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
]
`;

exports[`when not all PR URLs are available updates each platforms task notes except for missing platforms 1`] = `
[
  [
    "android-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/android/pr/1">Android PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "bsk-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/BrowserServicesKit/pr/1">BrowserServicesKit PR</a></li>
    <li>Error creating iOS PR</li><li><a href="https://github.com/duckduckgo/macos-browser/pr/1">macOS PR</a></li>
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "macos-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/macos-browser/pr/1">macOS PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
  [
    "windows-123",
    {
      "html_notes": "<h2>New release:<h2>
<ol>
    <li>version [[version]]</li>
    <li>[[commit]]</li>
    <li>[[release_url]]</li>
    <li><a href="https://github.com/duckduckgo/windows-browser/pr/1">Windows PR</a></li>
    
</ol>
<h2>Release notes:</h2>
<p>[[notes]]</p>",
    },
  ],
]
`;
